prepping for merge

--- a/templates/details.html
+++ b/templates/details.html
@@ -13,7 +13,7 @@
 		<div class="jumbotron text-center">
 		  <h1>Test Details Page</h1>
 		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-			<a class="btn btn-info" href="home.html" role="button">Home Page</a>
+			<a class="btn btn-info" href="{{ url_for('index') }}" role="button">Home Page</a>
 		</div>
 
 		<div class="text-center">
