adding bootstrap to html files

--- a/templates/details.html
+++ b/templates/details.html
@@ -1,19 +1,32 @@
-<!DOCTYPE html>
-		<html lang="en">
-		<head>
-		  <title>Testing Details</title>
-		  <meta charset="utf-8">
-		  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<html lang="en">
+	<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+	<!-- Bootstrap CSS -->
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+			<link href="css/freelancer.min.css" rel="stylesheet">
 		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 		</head>
-		<body style="background-color:powderblue;">
 
+		<body style="background-color:#B85750;">
+	    <nav class="navbar navbar-dark bg-dark">
+				<a class="navbar-brand" href="../home.html">Zank</a>
+				<form class="form-inline my-2 my-lg-0">
+	      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+	      <button class="btn btn-secondary" href="results.html" type="submit">Search</button>
+	    </form>
+
+				</nav>
 		<div class="jumbotron text-center">
 		  <h1>Test Details Page</h1>
 		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-			<a class="btn btn-info" href="{{ url_for('index') }}" role="button">Home Page</a>
+			<a class="btn btn-secondary" href="../home.html" role="button">Back to Home Page</a>
 		</div>
 
 		<div class="text-center">
