--- a/templates/results.html
+++ b/templates/results.html
@@ -1,50 +1,120 @@
-<!DOCTYPE html>
-		<html lang="en">
-		<head>
-		  <title>Test Search Results!</title>
-		  <meta charset="utf-8">
-		  <meta name="viewport" content="width=device-width, initial-scale=1">
-		  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-		</head>
-		<body style="background-color:pink;">
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>Zank</title>
+  </head>
+  <body style="background-color:#B85750;">
+    <nav class="navbar navbar-dark bg-dark">
+			<a class="navbar-brand" href="../home.html">Zank</a>
+			<form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button href="results.html" class="btn btn-secondary" type="submit">Search</button>
+    </form>
+
+			</nav>
+
+
+
 
 		<div class="jumbotron text-center">
 		  <h1>Building Specifications</h1>
 		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			<a class="btn btn-info" href="{{ url_for('index') }}" role="button">Home Page</a>
+			<a class="btn btn-secondary" href="../home.html" role="button">Home Page</a>
+		<div></div>
+
 		</div>
 
+	<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Result 1</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="details.html" class="btn btn-secondary">Read More</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Result 2</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="details.html" class="btn btn-secondary">Read More</a>
+      </div>
+    </div>
+  </div>
+
+
+</div>
+<div class="row">
+
+<div class="col-sm-6">
+<div class="card">
+	<div class="card-body">
+		<h5 class="card-title">Result 1</h5>
+		<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+		<a href="details.html" class="btn btn-secondary">Read More</a>
+	</div>
+</div>
+</div>
+<div class="col-sm-6">
+<div class="card">
+	<div class="card-body">
+		<h5 class="card-title">Result 2</h5>
+		<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+		<a href="details.html" class="btn btn-secondary">Read More</a>
+	</div>
+</div>
+</div>
+</div>
+
+
+<!--
 		<div class="container">
 		  <div class="row">
 		    <div class="col-sm-4">
 		      <h3>Result 1</h3>
 		      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
 		      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-					<a class="btn btn-info" href="{{ url_for('details') }}" role="button">Learn More</a>
+					<a class="btn btn-secondary" href="details.html" role="button">Learn More</a>
 		    </div>
+				<! Adding Django instead of html : href="{{ url_for('details') }}"   -->
+				<!--
 		    <div class="col-sm-4">
 		      <h3>Result 2</h3>
 		      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
 		      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-					<a class="btn btn-info" href="{{ url_for('details') }}" role="button">Learn More</a>
+					<a class="btn btn-secondary" href="details.html" role="button">Learn More</a>
+				<! Adding Django instead of html : href="{{ url_for('details') }}"   -->
+				<!--
 		    </div>
 		    <div class="col-sm-4">
 		      <h3>Result 3</h3>
 		      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
 		      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-					<a class="btn btn-info" href="{{ url_for('details') }}" role="button">Learn More</a>
+					<a class="btn btn-secondary" href="details.html" role="button">Learn More</a>
+				<!- Adding Django instead of html : href="{{ url_for('details') }}"
 		    </div>
 		  </div>
 		</div>
-
-		</body>
+-->
 
 		<!-- Footer Links -->
 		<div></div><div></div>
 			<div class="footer-copyright text-center py-3">© 2019 Copyright:
 				<a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
 			</div>
-
+			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+			</body>
 		</html>
