Redirect user to home page after login.

--- a/zank/accounts/templates/accounts/signup.html
+++ b/zank/accounts/templates/accounts/signup.html
@@ -9,7 +9,7 @@
             <!-- Form to sign up for a nee account -->
             <form method="post" class="mx-auto">
                 {% csrf_token %}
-                <input type="hidden" name="csrfmiddlewaretoken" value="JWpDxIqd0XAypXZ0N68FkmuX3HKCFTqW2ZsEr66JI5A6hC2XyIbBBY2CIajUOIxx">
+                <!--<input type="hidden" name="csrfmiddlewaretoken" value="JWpDxIqd0XAypXZ0N68FkmuX3HKCFTqW2ZsEr66JI5A6hC2XyIbBBY2CIajUOIxx"> -->
 
                     <!-- Email address field -->
                     <div class="form-group row">
