--- a/zank/codes/templates/codes/base.html
+++ b/zank/codes/templates/codes/base.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- {{ url_for('static', filename='style.css') }} -->
 <head>
 
 
@@ -19,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
-    <link href="../../../css/freelancer.min.css" rel="stylesheet">
+    <link href="../../../staticfiles/css/freelancer.min.css" rel="stylesheet">
 
   <title>{% block title %}Zank{% endblock %}</title>
 
