--- a/zank/codes/templates/codes/base.html
+++ b/zank/codes/templates/codes/base.html
@@ -26,7 +26,6 @@
 
 </head>
 
-
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
       <div class="container">
@@ -46,6 +45,17 @@
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
             </li>
+            {% if not user.is_authenticated %}
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Login</a>
+            </li>
+
+            {% else %}
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Logout</a>
+            </li>
+
+            {% endif %}
           </ul>
         </div>
       </div>
