--- a/zank/codes/templates/codes/crud/create.html
+++ b/zank/codes/templates/codes/crud/create.html
@@ -1,7 +1,8 @@
-{% extends 'base.html' %}
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
 
-{% block content %}
+<input class="btn btn-success" type="submit" value="Confirm">
 
-{% include 'form_template.html' %}
 
-{% endblock %}
+</form>
