--- a/zank/templates/base.html
+++ b/zank/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!--{# {{ url_for('static', filename='style.css') }}#} -->
+<!-- {{ url_for('static', filename='style.css') }} -->
 <head>
 
 
@@ -61,11 +61,11 @@
       </div>
     </nav>
 
+
+
     {% block content %}
 
-    
     {% endblock %}
-
 
     <!-- Theme Scripts -->
     <script src="../../../vendor/jquery/jquery.min.js"></script>
