refactored template inheritance

--- a/zank/accounts/templates/accounts/login.html
+++ b/zank/accounts/templates/accounts/login.html
@@ -1,37 +1,42 @@
-<div class="container">
-    <!-- Log in Section -->
-    <h3>Log In <small class="text-muted">and Make Your Buildings a Reality!</small></h3>
-    <hr>
-    <div class="row">
-        <div class="col">
-            <!-- display messages to the user if needed -->
-            {% if form.errors %}
-                <p>Your username and password didn't match. Please try again.</p>
-            {% endif %}
+{% extends 'base.html' %}
+    {% block content %}
 
-            <!-- Login form -->
+    <div class="container">
+        <!-- Log in Section -->
+        <h3>Log In <small class="text-muted">and Make Your Buildings a Reality!</small></h3>
+        <hr>
+        <div class="row">
+            <div class="col">
+                <!-- display messages to the user if needed -->
+                {% if form.errors %}
+                    <p>Your username and password didn't match. Please try again.</p>
+                {% endif %}
 
-            <form method="post" class="mx-auto">
-                {% csrf_token %}
-                <div class="form-group row">
-                    <div class="col-8">
-                        <label for="id_username">Username</label>
-                        <input class="form-control" type="text" name="username" id="id_username" required>
+                <!-- Login form -->
+
+                <form method="post" class="mx-auto">
+                    {% csrf_token %}
+                    <div class="form-group row">
+                        <div class="col-8">
+                            <label for="id_username">Username</label>
+                            <input class="form-control" type="text" name="username" id="id_username" required>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-8">
-                        <label for="id_password">Password</label>
-                        <input class="form-control" type="password" name="password" id="id_password" required>
+                    <div class="form-group row">
+                        <div class="col-8">
+                            <label for="id_password">Password</label>
+                            <input class="form-control" type="password" name="password" id="id_password" required>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-8">
-                        <input type="submit" value="Login" class="btn btn-success">
-                        <input type="hidden" name="next" value="{{ next }}">
+                    <div class="form-group row">
+                        <div class="col-8">
+                            <input type="submit" value="Login" class="btn btn-success">
+                            <input type="hidden" name="next" value="{{ next }}">
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
-</div>
+
+    {% endblock %}
