--- a/zank/codes/templates/codes/details.html
+++ b/zank/codes/templates/codes/details.html
@@ -1,18 +1,6 @@
 
-<html lang="en">
-	<head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
-	<!-- Bootstrap CSS -->
-			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-			<link href="css/freelancer.min.css" rel="stylesheet">
-		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-		</head>
+{% extends 'base.html' %}
+	{% block content %}
 
 		<body style="background-color:#B85750;">
 	    <nav class="navbar navbar-dark bg-dark">
@@ -43,5 +31,4 @@
 			<div class="footer-copyright text-center py-3">© 2019 Copyright:
 				<a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
 			</div>
-
-		</html>
+	{% endblock %}
