--- a/zank/codes/templates/codes/search.html
+++ b/zank/codes/templates/codes/search.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+	{% block content %}
 <form method='POST' action='/search'>
     <input type="text">
     <!-- BUTTON -->
@@ -5,3 +7,4 @@
         <button class='btn btn-primary' type='submit'>Search!</button>
     </div>
 </form>
+    {% endblock %}
