--- a/zank/templates/form_template.html
+++ b/zank/templates/form_template.html
@@ -1,4 +1,4 @@
-<form method="post" enctype="multipart/form-data" action="codes/add-code/">
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
 
