Restore CSS styles and top margins on containers.

--- a/zank/codes/templates/codes/home.html
+++ b/zank/codes/templates/codes/home.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-
   <!-- Portfolio  -->
   <section class="page-section portfolio" id="portfolio">
-    <div class="container">
+    <div class="container mt-5">
 
       <!-- Portfolio Header -->
       <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Reference</h2>
@@ -96,12 +95,12 @@
       </div>
       <!-- New Row -->
 
-    </div>
+</div>
   </section>
 
   <!-- About Section -->
   <section class="page-section bg-primary text-white mb-0" id="about">
-    <div class="container">
+    <div class="container mt-5">
 
       <!-- About Header -->
       <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
@@ -134,7 +133,7 @@
 
   <!-- Contact Section -->
   <section class="page-section" id="contact">
-    <div class="container">
+    <div class="container mt-5">
 
       <!-- Contact Section Heading -->
       <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
@@ -195,7 +194,7 @@
 
   <!-- Footer -->
   <footer class="footer text-center">
-    <div class="container">
+    <div class="container mt-5">
       <div class="row">
 
         <!-- Footer Location -->
@@ -234,7 +233,7 @@
 
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
-    <div class="container">
+    <div class="container mt-5">
       <small>Copyright &copy; Zank 2020</small>
     </div>
   </section>
@@ -258,7 +257,7 @@
           </span>
         </button>
         <div class="modal-body text-center">
-          <div class="container">
+          <div class="container mt-5">
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
@@ -297,7 +296,7 @@
           </span>
         </button>
         <div class="modal-body text-center">
-          <div class="container">
+          <div class="container mt-5">
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
@@ -336,7 +335,7 @@
           </span>
         </button>
         <div class="modal-body text-center">
-          <div class="container">
+          <div class="container mt-5">
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
@@ -375,7 +374,7 @@
           </span>
         </button>
         <div class="modal-body text-center">
-          <div class="container">
+          <div class="container mt-5">
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
@@ -414,7 +413,7 @@
           </span>
         </button>
         <div class="modal-body text-center">
-          <div class="container">
+          <div class="container mt-5">
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Image  -->
@@ -453,7 +452,7 @@
           </span>
         </button>
         <div class="modal-body text-center">
-          <div class="container">
+          <div class="container mt-5">
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
