--- a/zank/codes/templates/codes/signup.html
+++ b/zank/codes/templates/codes/signup.html
@@ -127,7 +127,7 @@
             <button type="submit" class="btn btn-success btn-lg btn-block">Register Now</button>
         </div>
     </form>
-	<div class="text-center">Already have an account? <a href="#">Sign in</a></div>
+	<div class="text-center">Already have an account? <a href="login.html">Sign in</a></div>
 </div>
 </body>
 </html>
