--- a/zank/codes/templates/codes/details.html
+++ b/zank/codes/templates/codes/details.html
@@ -1,34 +1,49 @@
-
 {% extends 'base.html' %}
-	{% block content %}
 
-		<body style="background-color:#B85750;">
-	    <nav class="navbar navbar-dark bg-dark">
-				<a class="navbar-brand" href="../home.html">Zank</a>
-				<form class="form-inline my-2 my-lg-0">
-	      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-	      <button class="btn btn-secondary" href="results.html" type="submit">Search</button>
-	    </form>
+{% block content %}
 
-				</nav>
-		<div class="jumbotron text-center">
-		  <h1>Test Details Page</h1>
-		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-			<a class="btn btn-secondary" href="../home.html" role="button">Back to Home Page</a>
-		</div>
+<div class="container">
+<h1>{{code.title}}</h1>
 
-		<div class="text-center">
-		    <div>
-		      <h3>More Details</h3>
-		      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-		    </div>
+<p> {{code.description}}</p>
 
-		  </div>
+</div>
 
-		</body>
-
-		<!-- Footer Links -->
-			<div class="footer-copyright text-center py-3">© 2019 Copyright:
-				<a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+<div>
+	<div class="row">
+	  <div class="col-sm-6">
+				<div class="card">
+					<div class="card-body">
+					<div class="card-title"><h3>DOs</h3>
+					<div class="card-text">{{code.can_dos}}
+					</div>
+					</div>
+				</div>
 			</div>
+	    </div>
+	  </div>
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="card">
+					<div class="card-body">
+					<div class="card-title"><h3>DONTs</h3>
+					<div class="card-text">{{code.cannot_dos}}
+					</div>
+					</div>
+				</div>
+			</div>
+</div>
+
+<div>
+{% if user.is_authenticated and user.architectorofficer.is_officer is True %}
+<div class="row">
+<a class="mr-5"href="{% url 'codes:edit_code' code.slug %}">Update This Code</a>
+<a href="{% url 'codes:remove_code' code.slug %}">Delete This Code</a>
+</div>
+{% endif %}
+
+</div>
+
+
+
 	{% endblock %}
