--- a/zank/codes/templates/codes/home.html
+++ b/zank/codes/templates/codes/home.html
@@ -40,7 +40,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../../../staticfiles/img/portfolio/cake.png" alt="">
+            <img class="img-fluid" src="staticfiles/img/portfolio/cake.png" alt="">
           </div>
         </div>
 
