removed css from html login file created css file

--- a/zank/codes/templates/codes/home.html
+++ b/zank/codes/templates/codes/home.html
@@ -64,7 +64,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../../../staticfiles/img/portfolio/game.png" alt="">
+            <img class="img-fluid" src="staticfiles/img/portfolio/game.png" alt="">
           </div>
         </div>
 
@@ -76,7 +76,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../../../staticfiles/img/portfolio/safe.png" alt="">
+            <img class="img-fluid" src="/staticfiles/img/portfolio/buildings.png" alt="">
           </div>
         </div>
 
@@ -88,7 +88,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../../../staticfiles/img/portfolio/submarine.png" alt="">
+            <img class="img-fluid" src="s/staticfiles/img/portfolio/constructionImg1.png" alt="">
           </div>
         </div>
 
@@ -120,7 +120,7 @@
           <p class="lead">Welcome to Zank! Your one stop shop to search for all things building codes. You can find ICC regulations and building codes to help you find all answers to questions for your construction endeavors.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Zank clients come from artchetechural bakcgrounds including construction workers, ICC employees, and archetect companies.</p>
+          <p class="lead">Zank clients come from artchetechural bakcgrounds including construction workers, ICC employees, and infrastructure companies.</p>
         </div>
       </div>
 
@@ -136,7 +136,7 @@
     <div class="container mt-5">
 
       <!-- Contact Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Us</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom">
@@ -261,7 +261,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Image Caption</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Image Caption--</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -273,7 +273,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/cabin.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5">CAPTION</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -312,7 +312,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="../../../staticfiles/img/portfolio/cake.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5"></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -427,7 +427,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Next Image (Here) -->
-                <img class="img-fluid rounded mb-5" src="../../../staticfiles/img/portfolio/safe.png" alt="">
+                <img class="img-fluid rounded mb-5" src="staticfiles/img/portfolio/safe.png" alt="">
                 <!-- Next Caption -->
                 <p class="mb-5"></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -456,7 +456,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Caption</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Image - Caption</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
