--- a/zank/codes/templates/codes/login.html
+++ b/zank/codes/templates/codes/login.html
@@ -9,8 +9,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
+<style>body {background-color: #B85750;}</style>
 </head>
 <body>
 <div class="login-form">
