--- a/zank/static/css/login.css
+++ b/zank/static/css/login.css
@@ -1,8 +1,8 @@
+<style>
+body {
+  background-color: hsl(4, 42%, 52%);
+  font-family: 'Roboto', sans-serif;}
 
-  body{
-		background-color: #B85750;
-		font-family: 'Roboto', sans-serif;
-	}
 	.login-form {
 		width: 340px;
     	margin: 50px auto;
