--- a/zank/accounts/templates/accounts/login.html
+++ b/zank/accounts/templates/accounts/login.html
@@ -2,6 +2,15 @@
     {% block content %}
 
     <div class="container">
+
+        {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                    <p{% if message.tags %} class="{{ message.tags }} alert alert-success"{% endif %}>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+
         <!-- Log in Section -->
         <h3>Log In <small class="text-muted">and Make Your Buildings a Reality!</small></h3>
         <hr>
